@@ -152,6 +152,17 @@ def get2(key1, key2, default=None, fail=False):
     return x.get(key1, x.get(key2, default, fail))
 
 
+def get_int(key, default):
+    value = get(key, default)
+    if isinstance(value, (str, unicode)) and value.isdigit():
+        value = int(value)
+
+    if isinstance(value, int):
+        return value
+
+    return default
+
+
 def getpath(key, default=None, fail=False):
     """getpath(k, v) <==> load().getpath(k, v)"""
     return load().getpath(key, default, fail=fail)
