@@ -1,3 +1,6 @@
+2014/07/16 (1.2.34)
+- Fixed setting dupes to 0.
+
 2014/07/15 (1.2.33)
 - Fixed bookmark status in `dump'.
 - Fixed tagging of untagged tracks.
